🐺⏱ Updated with Glitch

--- a/settings.json
+++ b/settings.json
@@ -11,7 +11,7 @@
     "startDelay":[1500,2500,4000,6000,4500,2500],
     "agree": "Работа бота заключается в том что бы сохранять аудиоголосовые сообщения и отсылать их всем желающим, вы готовы поделиться своими голосовыми сообщениями?",
 
-    "help": "• Графические нотации предоставляют широкое поле для интерпретации произведения и импровизации исполнителем, поэтому не бойтесь импровизировать - главное, чтобы ваша 'озвучка' отражала ваше видение картины, ваше ощущение от неё.\n• Все записи анонимны.\n• Запись может быть любой длины и вы можете использовать любые предметы/инструменты.\n• Если на телефоне вы зажмёте микрофон и смахнёте его наверх, то можете записать звук без удерживания.\n\nВажно! Просим уважать друг друга и не отправлять записи с нецензурным содержанием. Спасибо! \nЕсли вы нашли ошибку или у вас есть предложения по улучшению, пишите сюда @belvedersky",
+    "help": "• Графические нотации предоставляют широкое поле для интерпретации произведения и импровизации исполнителем, поэтому не бойтесь импровизировать - главное, чтобы ваша 'озвучка' отражала ваше видение картины, ваше ощущение от неё.\n• Запись публикуюется анонимно, по желанию можно указать себя как автора.\n• Запись может быть любой длины (от 1 секунды до 3 минут) и вы можете использовать любые предметы/инструменты.\n• Если на телефоне вы зажмёте микрофон и смахнёте его наверх, то можете записать звук без удерживания.\n\nВажно! Просим уважать друг друга и не отправлять записи с нецензурным содержанием. Спасибо! \nЕсли вы нашли ошибку или у вас есть предложения по улучшению, пишите сюда @belvedersky",
 
     "why": "Кружок электроники, обращаясь к различным технологиям, смотрит на них как на медиа, которые являются той формой, которая влияет и на содержание.\nЭто один из постулатов медиаискусства, которое в свою очередь связано и с другими формами искусств.\nОдной из таких форм, которая важна для многих из нас, является музыка.\n\nМедиум музыки - это не только звук. Это и всевозможные звуковые носители, это и текст или графика - то есть, тот или иной способ нотации.\n\nИзначально нотация служила только для записи и сохранения музыки, но со временем её возможности как медиума создали и отдельную профессию композитора (результатом работы которого является не звук, а текст), и особые отношения между композитором и исполнителем.\nС одной стороны, исполнитель должен с уважением относиться к тексту и замыслу композитора, но с другой стороны его интерпретация может обогатить этот замысел.\n\nПодобно тому как фотография бросила вызов живописи, звукозапись бросила вызов нотации. Это было одно из последствий её изобретения. Поэтому авангардные композиторы стали обращаться не только к фиксации, но и к возможностям интерпретации нотной записи. Так появилась графическая нотация, которая расширяла возможности интерпретации для исполнителя, давая ему большую свободу.",
     "partiture": {
@@ -40,13 +40,46 @@
     "https://sun9-39.userapi.com/QJgrgrhocV2mNA9JzyGFpZGOszJu-DpQrAtMaA/TcbfxiWCMAc.jpg",
     "https://sun9-43.userapi.com/lLIqryAyX0f1rmSeu14a2EcGgCL3CHrgzx7xKg/U3Sw-eaAs30.jpg",
     "https://sun9-64.userapi.com/rtW7rHfJ41pyVOQXC973DIilUhvzZdgRCqCv9Q/EqeHhHgJWFk.jpg",
-    "https://sun9-55.userapi.com/agGVekawn2UfFz8RmX7IBUvj1DIg-Jx0Ooth6Q/CNV2Qwgt754.jpg"
+    "https://sun9-55.userapi.com/agGVekawn2UfFz8RmX7IBUvj1DIg-Jx0Ooth6Q/CNV2Qwgt754.jpg",
+    "https://sun3-13.userapi.com/FqxiSKdrWKmJ0ni8B90PLhKnQkEz-e8oRE06oA/Ldekq1K6My8.jpg",
+    "https://sun3-12.userapi.com/9ecwNKL0BPwrgOMBoW3CkHgrasEe8KkVeCUNww/ekL5F7D-5I0.jpg",
+    "https://sun3-12.userapi.com/vH4vRxuFIxRQhmaJe9K29xXsOMBT7lF_P6lltg/TWT9ddoe3ts.jpg",
+    "https://sun3-11.userapi.com/fdF4gVnJ1IKz7yKbSw4hMpiM5rn5w6fKey3BfQ/JZtPQyalOwc.jpg",
+    "https://sun3-11.userapi.com/66EvMHaCSj_j7Bae-hrzfO2j92D1if--pMQIMw/qz-JgqDKx9I.jpg",
+    "https://sun3-10.userapi.com/cnLpRPA7DKROSdNISb_XcdsB79_n1mB0WCuMsg/lm7oslsS1-w.jpg",
+    "https://sun3-12.userapi.com/7RWGpG_XHXIDIxFK6gGyLG8nSHYEdleh-h_SQA/TsNlXgv0aFI.jpg",
+    "https://sun3-11.userapi.com/FS7V_69q0dRk5VkycVqCWlFybQJV0Ii-yYVvkQ/FYdpGojaWOw.jpg",
+    "https://sun3-13.userapi.com/zSYWO7r-yLhk_0Eyth-JaOZ8Lj0vzXhJTP9RTg/t8mZBMs0QWU.jpg",
+    "https://sun3-12.userapi.com/ugf10dsb0lSAELEQsqH7uYYO-tPzeXI5WDSL3g/S2uS1gnwOT8.jpg",
+    "https://sun3-10.userapi.com/-J_DP1XHtetMbZ36zspw0C6k90zByWyguUdK7Q/f8ZKMzZiiHk.jpg",
+    "https://sun3-10.userapi.com/dC3yRJVdycHzraC8cQTXNYPtu67NQQwdm4_sKw/ZFKs701I_Qc.jpg",
+    "https://sun3-10.userapi.com/fab14bvr4XD7xWVy0jCTHZ_s4CX4W04ExeJyOQ/n_g6FjfmoYY.jpg",
+    "https://sun3-13.userapi.com/rM0ukOFLmNbvYCBXZABzPdtFnfBx7ML2lapeag/gwETDLgv3VY.jpg",
+    "https://sun3-11.userapi.com/qhXDIQAurcwT8l5m1YptdpG3GcMs-thLZlIE1Q/HZXd3TzCDEg.jpg",
+    "https://sun3-13.userapi.com/ZFT4KqL-96ahYwJV0WkO8CJLY8h_wUJjANaFOA/I-KZ3C-hQBs.jpg",
+    "https://sun3-13.userapi.com/0OUKBCtlYoqiEX0FgMZoe_B5i--FXGN42T3Eqg/NfwxrmUMbvw.jpg",
+    "https://sun3-12.userapi.com/iYgR-R41NAbx5WcvMjA919V4fPviNoHE3FSRKw/hnElobY9aRM.jpg",
+    "https://sun3-11.userapi.com/0oWvGAfV7rF0sGVLx6mzE7fXU2tLRlHo8ctdew/QtNvMVflzzE.jpg",
+    "https://sun3-13.userapi.com/989C6iKIWl2Y2G5b8dwQxPERn8Hg5WNxM8BC-A/F3pbzc1p7Is.jpg",
+    "https://sun3-13.userapi.com/v-wu0a5b3VVEbUsXOkZ4zJ8nNueGsfoE55L2Wg/og7vnN8gBoY.jpg",
+    "https://sun3-13.userapi.com/-uCp_ctaS7xK7wEzuL4aZ8_0lJfEO28k6ach-Q/OgS76zoPjxo.jpg",
+    "https://sun3-11.userapi.com/xOxUqt9ZQUc_uTygjs9kMtQTcXcN328WPwkGlg/KBDxcxpH5Es.jpg",
+    "https://sun3-11.userapi.com/0-D8pxKALc7asoDUvG3LndKzjHyEBr6jdtYwNg/dkNfgaWZ9sg.jpg",
+    "https://sun3-10.userapi.com/2QA4qMipsdbvV0Qb6l8lPEBpzqbPFGnKrB8wNw/naf7Kjyg3to.jpg",
+    "https://sun3-13.userapi.com/0OUKBCtlYoqiEX0FgMZoe_B5i--FXGN42T3Eqg/NfwxrmUMbvw.jpg",
+    "https://sun3-13.userapi.com/i-Fj4kwqQgCTP1_S_RwvqYCVXnL0c-I8xNmLhA/68DTItkexaE.jpg",
+    "https://sun3-10.userapi.com/rHc5HPk_Z-CmNq6CtmPEuJb701xGuou20MwMqg/pUaPuHOUoGk.jpg",
+    "https://sun3-12.userapi.com/sGd5XVzPpjAP9ilktd7TcCaqmMjIn6rtuqM4zg/FZfqoF8tMeY.jpg",
+    "https://sun3-11.userapi.com/1tdx_5ILaW1tn7Ouky4Cci1SVlQuLDzE8mTvTg/OTKbpeurXE4.jpg",
+    "https://sun3-11.userapi.com/tAK1Ds1uFjwB_4mBraE8ZQSTtweBHIiPs4mpBA/mOYmITfzqBU.jpg",
+    "https://sun3-11.userapi.com/RFr-xBQX4j1un3XqCIzkNGw1Ich_KnVFtk6sXQ/Ftn8B-5s4vE.jpg",
+    "https://sun3-13.userapi.com/7NxvHXd8ATZkvnM-n2_RSFNbEOePLC42An5hgQ/eSidDOLzuT8.jpg",
+    "https://sun9-58.userapi.com/c857620/v857620342/1f96bb/M1Pe45liLkI.jpg"
   ],
   "sql": {
     "initSession": "CREATE TABLE Session (id VARCHAR(255) PRIMARY KEY, session VARCHAR(255));",
     "initVoice": "CREATE TABLE Voices (id INTEGER PRIMARY KEY AUTOINCREMENT, voice TEXT)",
     "initPartiture": "CREATE TABLE Paritures (id INTEGER PRIMARY KEY AUTOINCREMENT NOT NULL, image TEXT NOT NULL, chatId TEXT NOT NULL, username TEXT, description TEXT, anonymous INT DEFAULT(1), moderated INT DEFAULT(0) )",
-
     "addVoice": "INSERT INTO Voices (voice,image,duration) VALUES (?,?,?)",
     "addAuthorVoice":"UPDATE Voices SET username = ? WHERE voice = ?;",
     "addPartiture": "INSERT INTO Paritures (image, chatId,  username, description) VALUES (?,?,?,?)",
