--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "pug": "^2.0.4",
-    "sqlite3": "^4.2.0",
+    "mediaserver": "^0.1.1",
+    "pug": "^3.0.0",
+    "sqlite3": "4.1.0",
     "telegraf": "^3.38.0",
-    "telegraf-session-sqlite": "^1.0.1",
-    "mediaserver": "^0.1.1"
+    "telegraf-session-sqlite": "^1.0.1"
   },
   "engines": {
     "node": "12.x"
